Add to Database

--- a/BookShop/appsettings.Development.json
+++ b/BookShop/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "BookShop": "Server=BS-00829\\SQLEXPRESS; Database=BookShopDb;Trusted_Connection=True;TrustServerCertificate=True"
     }
-  }
 }
